--- a/bin/lattices.yml
+++ b/bin/lattices.yml
@@ -6,3 +6,14 @@ D2Q9:
   w0: 4.0/9.0
   ws: 1.0/9.0
   wd: 1.0/36.0
+
+D2V17:
+  q: 17
+  ex: [0, 1, 0, -1, 0, 1, -1, -1, 1, 2, -2, -2, 2, 3, 0, -3, 0]
+  ey: [0, 0, 1, 0, -1, 1, 1, -1, -1, 2, 2, -2, -2, 0, 3, 0, -3]
+  as: sqrt((5*(25 + sqrt(193)))/72)
+  w0: (575 + 193*sqrt(193))/8100
+  wp: (3355 - 91*sqrt(193))/18000
+  ws: (655 + 17*sqrt(193))/27000
+  wt: (685 - 49*sqrt(193))/54000
+  wq: (1445 - 101*sqrt(193))/162000
