--- a/bin/dados.yml
+++ b/bin/dados.yml
@@ -1,12 +1,12 @@
 domain:
   H: 1.0
   D: 0.05
-  Nx: 1024
+  Nx: 64
   Ny: 64
 
 simulation:
   lattice: D2V17
-  NSTEPS: 100000
+  NSTEPS: 500000
   NSAVE: 2000
   NMSG: 1000
   meshprint: false
@@ -16,14 +16,23 @@ gpu:
   nThreads: 32
 
 input:
-  Re: 1000
-  u_max: 0.0625
-  u_max_si: 1.0
+  Re: 1
+  u_max: 0.09
+  u_max_si: 0.25
   rho0: 1.0
 
 output:
   plot_module: true
   plot_profiles: false
+
+boundary:
+  periodic: false
+  gx: 1e-6
+  gy: 0.0
+  inlet: VP
+  rhoin: 1.0
+  outlet: VP
+  rhoout: 0.999
 
 air:
   rho: 1.21
